--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#6366f1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Kiddyverse</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html> 
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#4F46E5" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <title>KiddyVerse</title>
+  <meta name="description"
+    content="KiddyVerse - Where Learning Meets Magic! AI-powered educational assistant for students. Upload images, extract text, get summaries, translations, and answers!" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
+</html>
